# ERP

backend/: Makefile  manage.py  pyproject.toml  readme.md
backend/apps/accounting/: models.py
backend/apps/contact/: models.py
backend/apps/stock/: models.py
backend/config/: urls.py
backend/config/settings/: base.py  development.py
